[workspace]
resolver = "2"

members = [
    "quantlib",
    "trading-engine",
    "examples/*",
]

[profile.release]
#lto = true
opt-level = 3
#codegen-units = 1

[workspace.dependencies]
num-format = "0.4.0"
tracing = "0.1.25"
chrono = "0.4"
minstant = { version = "0.1", features = ["fallback-coarse"]}
criterion = { version = "0.5.1"}
