[package]
name = "quantlib"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantlib"

[dependencies]
anyhow = "1.0" 
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
korean-lunar-calendar = "1.0"
chrono = "0.4"
log = "0.4"
criterion = "0.5"
num-traits = "0.2"
assert_approx_eq = "1.1"
regex = "1.10" 
ndarray = { version = "0.15", features = ["serde"] } 
#ndarray-linalg = { version = "0.16", features = ["openblas"] } 
rand = "0.8" 
rand_distr = "0.4" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 

[dev-dependencies]
rstest = "0.18" 

[[bench]]
name = "find_index"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "binary_search_ndarray_vector_comparison"
harness = false

[[bench]]
name = "construction_ndarray"
harness = false
