[package]
name = "quantlib"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantlib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0" 
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
korean-lunar-calendar = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
criterion = "0.5"
num-traits = "0.2"
assert_approx_eq = "1.1"
regex = "1.10" 
ndarray = { version = "0.16", features = ["serde"] } 
rustc-hash = "2.0"
lazy_static = "1.4"
#ndarray-linalg = { version = "0.16", features = ["openblas"] } 
rand = "0.8" 
rand_distr = "0.4" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
argmin = "0.10"
enum_dispatch = "0.3"
statrs = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rayon = "1.10"
once_cell = "1.19"

[dev-dependencies]
rstest = "0.21" 

[[bench]]
name = "find_index"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "binary_search_ndarray_vector_comparison"
harness = false

[[bench]]
name = "construction_ndarray"
harness = false
