[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "trading_engine"

[[bench]]
name = "wrapper_performance"
harness = false

[[bench]]
name = "book_price"
harness = false

[[bench]]
name = "float"
harness = false

[[bench]]
name = "timer"
harness = false

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "ustr"
harness = false

[[bench]]
name = "arithematics"
harness = false

[[bench]]
name = "sharing"
harness = false

[[bench]]
name = "communication"
harness = false

[[bench]]
name = "hashmap"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
#target-cpu = "native"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rstest = "0.21"
minstant = "0.1"
quanta = "0.12"
criterion = "0.5"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing", "local-offset"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
lazy_format = "2.0"
joinery = "3.1" 
hashbrown = "0.14"
enum_dispatch = "0.3"
arc-swap = "1.7"
ustr = "1.0"
once_cell = "1.19"
core_affinity = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
kanal = "0.1.0-pre8"
ryu = "1.0"
itoa = "1.0"
parking_lot = "0.12"
fixed = "1.27"
rust_decimal = "1.35"
rust_decimal_macros = "1.34"
thiserror = "1.0"
[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["write-integers", "write-floats", "parse-integers", "parse-floats"]