[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "trading_engine"

[[bench]]
name = "string"
harness = false

[[bench]]
name = "wrapper_performance"
harness = false

[[bench]]
name = "float"
harness = false

[[bench]]
name = "timer"
harness = false

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "arithematics"
harness = false

[[bench]]
name = "sharing"
harness = false

[[bench]]
name = "communication"
harness = false

[[bench]]
name = "hashmap"
harness = false

[[bench]]
name = "vector"
harness = false

[dependencies]
anyhow = "1.0"
criterion = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
core_affinity = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
joinery = "3.1" 
lazy_format = "2.0"
minstant = "0.1"
quanta = "0.12"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing", "local-offset"] }
enum_dispatch = "0.3"
arc-swap = "1.7"
ustr = "1.0"
once_cell = "1.19"
ryu = "1.0"
itoa = "1.0"
parking_lot = "0.12"
fixed = "1.27"
rust_decimal = "1.35"
rust_decimal_macros = "1.34"
thiserror = "1.0"
rustc-hash = "2.0"
flexstr = {version = "0.9", features = ["fast_format", "fp_convert", "int_convert", "serde"]}
smallvec = "1.13"