[package]
name = "examples-foo"
version = "0.1.0"
edition = "2021"
#license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
korean-lunar-calendar = { version = "1.0.0"}
time = { version = "0.3.20", features = ["macros"]}
quantlib = { version = "0.1.0", path = "../../quantlib" }
simba = { version = "0.8.1" }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
env_logger = { version = "0.11.1"}
criterion = { version = "0.5.1"}

[[bench]]
name = "foo"
harness = false
