[package]
name = "examples-foo"
version = "0.1.0"
edition = "2021"
#license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
korean-lunar-calendar = { version = "1.0.0"}
time = { version = "0.3.20", features = ["macros"]}
quantlib = { version = "0.1.0", path = "../../quantlib" }
trading-engine = { version = "0.1.0", path = "../../trading-engine" }
simba = { version = "0.8.1" }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
env_logger = { version = "0.11.1"}
criterion = { version = "0.5.1"}
# very unstable and not recommended for use. 
# packed_simd 0.3.9 can not be compiled with the stable version  or Rust 1.76.9 at the moment of Feb 10 2024.
# packed_simd = { version = "0.3.9"} 

[[bench]]
name = "foo"
harness = false
