[package]
name = "examples-graph"
version = "0.1.0"
edition = "2021"
#license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
korean-lunar-calendar = { version = "1.0.0"}
time = { version = "0.3.20", features = ["macros"]}
quantlib = { version = "0.1.0", path = "../../quantlib" }
trading-engine = { version = "0.1.0", path = "../../trading-engine" }
env_logger = { version = "0.11.1"}
criterion = { version = "0.5.1"}
plotters = "0.3.5"


