[package]
name = "examples-log"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
minitrace = "0.6"
minstant = "0.1"
log = "0.4"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rayon = "1.10"
env_logger = "0.11"
env_filter = "0.1"
logcall = "0.1"