[package]
name = "examples-log"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
ftlog = []
mylogger = []
fast_log = []

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
log = "0.4"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rayon = "1.10"
env_logger = "0.11"
env_filter = "0.1"
logcall = "0.1"
fast_log = "1.6"
ftlog = "0.2"
trading-engine = { version = "0.1", path = "../../trading-engine" }
anyhow = "1.0"