[package]
name = "examples-prototype"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
trading-engine = { version = "0.1", path = "../../trading-engine" }
chrono = { version = "0.4", features = ["serde"] }
minstant = { version = "0.1", features = ["fallback-coarse"] }
time = { version = "0.3", features = ["macros"]}
fastdate = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap = "2.0"
bincode = "1.3"
anyhow = "1.0"
pcap-file = "2.0"
hex = "0.4"
base64 = "0.22"
etherparse = "0.15"
pnet = "0.35"
statrs = "0.17"